struct MqttotGraphqlMessagePacket {
  1: required string topic,
  2: required string payload,
}
