struct MqttotRegionHintPacket {
  1: required string hint,
}
